2007-11-19  Bastien Nocera  <hadess@hadess.net>

	* data/phonemgr.glade:
	* libgsm/glibgsmtest.c: (main):
	* libgsm/phonemgr-listener.c: (phonemgr_listener_queue_message):
	* libgsm/phonemgr-listener.h:
	* src/ui.c: (send_message):
	Add support for sending SMSes with delivery reports

2007-11-19  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c: (get_rfcomm_channel),
	(find_service_channel), (phonemgr_utils_get_serial_channel),
	(phonemgr_utils_get_gnapplet_channel),
	(phonemgr_utils_write_config), (phonemgr_utils_free),
	(phonemgr_utils_tell_driver), (phonemgr_utils_write_gnokii_config):
	* libgsm/phonemgr-utils.h: Add phonemgr_utils_get_gnapplet_channel
	to detect the channel used by gnapplet running on remote phones

	* libgsm/phonemgr-listener.c: (phonemgr_listener_connect),
	(phonemgr_listener_call_status):
	Add support for gnapplet, detect if gnapplet is running, and
	connect to the right channel if it's running, error out
	if it's not running (Closes: #312127)

2007-11-19  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Make the Nokia 6111 use the 6510 driver
	(Closes: #498062)

2007-11-17  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: Update from contact-lookup-applet,
	don't force the width to be restricted to the width of the
	entry, spotted by Diego Escalante Urrelo <diegoe@gnome.org>
	(Closes: #496092)

2007-11-16  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/gnome-phone-manager.1: Add man page from
	Francesco Namuri <francesco@namuri.it>
	(Closes: #496848)

2007-11-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in:
	* src/ui.c: (get_resource):
	Move ...
	* ui/*:
	to:
	* data/*:

	And assorted fixes

2007-11-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	* libgsm/glibgsmtest.c: Add a missing include for locale.h, this was
	causing a FTBFS (Closes #496631)

2007-11-15  Bastien Nocera  <hadess@hadess.net>

	* telepathy/connection-manager.c: