@@ -187,7 +187,7 @@ phoney_im_channel_send (TpSvcChannelTypeText *channel,
 
 	g_object_get (G_OBJECT (priv->conn), "listener", &listener, NULL);
 	DEBUG ("Sending message to '%s': '%s'", number, message);
-	phonemgr_listener_queue_message (listener, number, message);
+	phonemgr_listener_queue_message (listener, number, message, FALSE);
 	//FIXME use tp_svc_channel_type_text_emit_send_error on errors
 	tp_svc_channel_type_text_emit_sent (channel, time (NULL), type, message);
 
